[package]
authors = ["Wim Looman <wim@nemo157.com>"]
name = "cbor-diag"
version = "0.1.7"
description = """
A crate for parsing data encoded in [Concise Binary Object Representation
(CBOR)](https://cbor.io) (in any of raw binary, hex encoded (with comments) or
diagnostic notation) then printing it out in either annotated hex form or
diagnostic notation.
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nemo157/cbor-diag-rs"
readme = "README.md"
edition = "2018"

[workspace]
members = ["cli"]

[dependencies]
hex = { version = "0.4.0", default-features = false }
nom = { version = "5.1.2", default-features = false, features = ["std"] }
half = { version = "1.6.0", default-features = false }
chrono = { version = "0.4.14", default-features = false, features = ["alloc"] }
base64 = { version = "0.12.3", default-features = false, features = ["std"] }
url = { version = "2.1.0", default-features = false }
num-rational = { version = "0.3.0", default-features = false, features = ["num-bigint"] }
num-bigint = { version = "0.3.0", default-features = false, features = ["std"] }
num-traits = { version = "0.2.12", default-features = false }
separator = { version = "0.4.0", default-features = false }
uuid = { version = "0.8.0", default-features = false }
bs58 = { version = "0.3.1", default-features = false, features = ["alloc"] }

[dev-dependencies]
indoc = { version = "1.0.2", default-features = false }
proptest = { version = "0.10.0", default-features = false, features = ["std"] }
pretty_assertions = { version = "0.6.1", default-features = false }
