[package]
name = "cbor-diag"
version = "0.1.11"
description = """
A crate for parsing data encoded in [Concise Binary Object Representation
(CBOR)](https://cbor.io) (in any of raw binary, hex encoded (with comments) or
diagnostic notation) then printing it out in either annotated hex form or
diagnostic notation.
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nullus157/cbor-diag-rs"
edition = "2021"

[workspace]
members = ["cli"]

[dependencies]
nom = { version = "7.1.3", default-features = false, features = ["std"] }
half = { version = "2.1.0", default-features = false }
chrono = { version = "0.4.22", default-features = false, features = ["alloc"] }
url = { version = "2.3.1", default-features = false }
num-rational = { version = "0.4.1", default-features = false, features = ["num-bigint"] }
num-bigint = { version = "0.4.3", default-features = false, features = ["std"] }
num-traits = { version = "0.2.15", default-features = false }
separator = { version = "0.4.1", default-features = false }
uuid = { version = "1.1.2", default-features = false }
bs58 = { version = "0.5.0", default-features = false, features = ["alloc"] }
data-encoding = { version = "2.3.2", default-features = false, features = ["alloc"] }

[dev-dependencies]
indoc = { version = "2.0.1", default-features = false }
proptest = { version = "1.0.0", default-features = false, features = ["std"] }
pretty_assertions = { version = "1.3.0", default-features = false, features = ["std"] }
data-encoding-macro = { version = "0.1.12", default-features = false }
