[package]
name = "cbor-diag-cli"
version = "0.1.3"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2018"
description = """
A tool for transforming between different diagnostic encodings of [Concise
Binary Object Representation (CBOR)](https://cbor.io).
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nemo157/cbor-diag-rs"
readme = "README.md"

[[bin]]
name = "cbor-diag"
path = "src/main.rs"

[dependencies]
cbor-diag = { version = "0.1.5", path = "..", default-features = false }
hex = "0.4.0"
log = { version = "0.4.8", default-features = false }
paw = { version = "1.0.0", default-features = false }
structopt = { version = "0.3.0", default-features = false, features = ["paw", "color"] }
strum = { version = "0.17.1", default-features = false, features = ["derive"] }
anyhow = "1.0.26"
