[package]
name = "cbor-diag-cli"
version = "0.1.6"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2021"
description = """
A tool for transforming between different diagnostic encodings of [Concise
Binary Object Representation (CBOR)](https://cbor.io).
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nemo157/cbor-diag-rs"
readme = "README.md"

[[bin]]
name = "cbor-diag"
path = "src/main.rs"

[dependencies]
cbor-diag = { version = "0.1.9", path = "..", default-features = false }
hex = { version = "0.4.0", default-features = false, features = ["alloc"] }
log = { version = "0.4.11", default-features = false }
strum = { version = "0.24.1", default-features = false, features = ["derive", "std"] }
anyhow = { version = "1.0.31", default-features = false, features = ["std", "backtrace"] }
clap = { version = "3.2.20", default-features = false, features = ["color", "std", "wrap_help", "derive"] }
