[package]
name = "cbor-diag-cli"
version = "0.1.7"
edition = "2021"
description = """
A tool for transforming between different diagnostic encodings of [Concise
Binary Object Representation (CBOR)](https://cbor.io).
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nullus157/cbor-diag-rs"

[[bin]]
name = "cbor-diag"
path = "src/main.rs"

[dependencies]
cbor-diag = { version = "0.1.10", path = "..", default-features = false }
hex = { version = "0.4.0", default-features = false, features = ["alloc"] }
log = { version = "0.4.11", default-features = false }
anyhow = { version = "1.0.71", default-features = false, features = ["std", "backtrace"] }
clap = { version = "4.3.0", default-features = false, features = ["std", "derive", "color", "wrap_help", "error-context", "cargo", "suggestions", "usage"] }
